--- a/index.yaml
+++ b/index.yaml
@@ -46,6 +46,17 @@ indexes:
 - kind: Resource
   properties:
   - name: owner
+  - name: avail_date
+
+- kind: Resource
+  properties:
+  - name: owner
+  - name: avail_date
+    direction: desc
+
+- kind: Resource
+  properties:
+  - name: owner
   - name: created_date
     direction: desc
 
